--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ InteractiveUtils = "1.9"
 LDPCDecoders = "0.3"
 LinearAlgebra = "1.9"
 MacroTools = "0.5.9"
-Makie = "0.20"
+Makie = "0.20, 0.21"
 Nemo = "0.38, 0.39, 0.40, 0.41, 0.42, 0.43"
 Plots = "1.38.0"
 PrecompileTools = "1.2"
